<resources>
    <string name="app_name">Coffee Track</string>
    <string name="snackbar_coffee_recorded">Coffee Recorded</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="activity_coffee_stats_label">Coffee Consumption</string>
    <string name="statistics_this_week">This Week</string>
    <string name="statistics_today">Today</string>
    <string name="statistics_this_month">This Month</string>
    <string name="last_coffee_was">Last coffee:</string>
    <string name="timer_session">Timer Session</string>
    <string name="coffee_stats">Coffee Stats</string>
    <string name="coffee_cup_button">Coffee Cup Button</string>
    <string name="location_icon_button">Location Icon Button</string>
    <string name="phone_icon_button">Phone icon button</string>
    <string name="website_icon_button">Website icon button</string>
    <string name="find_me_coffee">Find Coffee</string>
    <string name="timer_pref_summary">Tap to choose timer duration</string>
    <string name="timer_pref_dialog_title">Timer duraction preference</string>
    <string name="timer_pref_title">Timer Duration</string>
    <string name="ringtone_pref_summary">Choose alarm tone</string>
    <string name="ringtone_pref_title">Alarm Ringtone</string>
    <string name="settings">Settings</string>
    <string name="find_coffee">Find Coffee</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="timer_preference_key">timer</string>
    <string name="ringtone_preference_key">ringtone</string>
    <string name="notification_title">Coffee Track Reminder</string>
    <string name="notification_text">Time to drink coffee</string>
    <string name="ringtone_default">Default ringtone</string>
</resources>
