<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_coffee_stats"
        android:title="@string/coffee_stats"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_start_session"
        android:title="@string/timer_session"
        android:icon="@drawable/ic_alarm_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_stop_session"
        android:title="@string/stop_timer"
        android:icon="@drawable/ic_alarm_off_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_item_find_coffee"
        android:title="@string/find_coffee"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>