<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_coffee_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nemwick.coffeetrack.CoffeeStatsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_statistics"
        style="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/toolbar_elevation"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    
    <ImageView
        android:id="@+id/image_statistics"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/toolbar_statistics"
        android:scaleType="centerCrop"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="80dp"
        android:columnCount="2"
        android:layout_below="@id/image_statistics">

        <TextView
            android:text="@string/statistics_today"
            style="@style/stats_grid_view_text"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/cups_today"
            android:gravity="right"
            android:layout_columnWeight="1"
            style="@style/stats_grid_view_text"/>


        <TextView
            android:text="@string/statistics_this_week"
            android:layout_columnWeight="1"
            style="@style/stats_grid_view_text"/>

        <TextView
            android:id="@+id/cups_week"
            android:gravity="right"
            android:layout_columnWeight="1"
            style="@style/stats_grid_view_text"/>

        <TextView
            android:text="@string/statistics_this_month"
            android:layout_columnWeight="1"
            style="@style/stats_grid_view_text"/>

        <TextView
            android:id="@+id/cups_month"
            android:layout_columnWeight="1"
            android:gravity="right"
            style="@style/stats_grid_view_text"/>

    </GridLayout>

</RelativeLayout>