<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/picker_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/find_me_coffee">

            <ImageView
                android:id="@+id/picker_coffee_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_picker"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/coffee_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:textSize="24sp" />


            <ImageButton
                android:id="@+id/location_button"
                style="@style/picker_details_image_buttons"
                android:layout_below="@id/coffee_shop_name"
                android:contentDescription="@string/location_icon_button"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_location_accent_24dp" />


            <TextView
                android:id="@+id/coffee_shop_addy"
                style="@style/picker_detail_text_views"
                android:layout_below="@id/coffee_shop_name"
                android:layout_toEndOf="@id/location_button"
                android:layout_toRightOf="@id/location_button" />

            <ImageButton
                android:id="@+id/phone_button"
                style="@style/picker_details_image_buttons"
                android:layout_below="@id/coffee_shop_addy"
                android:contentDescription="@string/phone_icon_button"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_phone_accent_24dp" />

            <TextView
                android:id="@+id/coffee_shop_phone"
                style="@style/picker_detail_text_views"
                android:layout_below="@id/coffee_shop_addy"
                android:layout_toEndOf="@id/phone_button"
                android:layout_toRightOf="@id/phone_button" />

            <ImageButton
                android:id="@+id/website_button"
                style="@style/picker_details_image_buttons"
                android:layout_below="@id/coffee_shop_phone"
                android:contentDescription="@string/website_icon_button"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_language_accent_24dp" />

            <TextView
                android:id="@+id/coffee_shop_website"
                style="@style/picker_detail_text_views"
                android:layout_below="@id/coffee_shop_phone"
                android:layout_toEndOf="@id/website_button"
                android:layout_toRightOf="@id/website_button" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/find_coffee_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_local_drink_white_24dp" />

    <WebView
        android:id="@+id/attributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="bottom"
        android:visibility="visible" />
</android.support.design.widget.CoordinatorLayout>
